# BookForge-dev

./: README.md  setup.py
bookforge/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bookforge/books/: test.txt  tests_xtts_book.txt  unthought.txt
bookforge/docs/: ASSESSMENT_REPORT.md  CHANGELOG.md  HOW_BOOKFORGE_WORKS.md  STREAMLIT_SETUP.md  UI_PROCESSING_FEATURE.md  WINDOWS_QUICK_START.md
bookforge/presets/: calm_longform.yaml  calm_longform_v2.yaml
bookforge/src/bookforge/: __init__.py  cli.py  config.py  incremental_processor.py  project.py  ui.py  ui_nicegui.py
bookforge/src/bookforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bookforge/src/bookforge/audio/: __init__.py  concat.py  m4b.py  normalise.py  normalize.py
bookforge/src/bookforge/ingest/: __init__.py  epub_ingest.py  pdf_ingest.py  txt_ingest.py
bookforge/src/bookforge/process/: __init__.py  chapter_detector.py  chunker.py  cleaner.py  sanitize.py
bookforge/src/bookforge/tts/: __init__.py  backend.py  factory.py  piper.py  xtts.py
bookforge/tests/: test_backends.py  test_imports.py
