[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookforge"
version = "0.1.0"
description = "Public domain texts → high-quality local TTS audiobooks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ebooklib>=0.18.0",
    "pyyaml>=6.0.0", 
]


[project.optional-dependencies]
piper = [
    "piper-tts>=1.2.0",
    "onnxruntime>=1.18.0",
    "pathvalidate>=3.0.0",
]
xtts = [
    "TTS>=0.22.0",  # Coqui TTS with XTTS
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy<2.0.0",  # XTTS needs numpy 1.x
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "black>=24.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ffmpeg-python>=0.2.0",
    "pyyaml>=6.0.0",
]


[project.scripts]
bookforge = "bookforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
